gsap - fix header logo icon on mobile

--- a/src/public/less/pages/gsap.less
+++ b/src/public/less/pages/gsap.less
@@ -26,15 +26,19 @@
 			color: #fff;
 			display: flex;
 			align-items: center;
+			justify-content: space-evenly;
 			width: 151px;
-			height: 32px;
+			padding: 4px 8px 4px 6px;
 			background: rgba(255, 255, 255, .24);
 			border-radius: 6px;
 			font-weight: 600;
 			margin-right: auto;
 			img {
-				margin-left: 6px;
 				margin-right: 8px;
+			}
+			@media (max-width: @screen-sm-min) {
+				padding: 2px 6px 2px 4px;
+				width: 147px;
 			}
 		}
 
@@ -110,7 +114,7 @@
 					justify-content: space-around;
 					height: 100%;
 					padding: 0;
-					margin: 5px 0;
+					margin: 0;
 					li {
 						margin-left: 24px;
 						a {
@@ -455,7 +459,7 @@
 								&.open .menu-mobile-bg {
 									display: block;
 									background: black;
-									opacity: 0.5;
+									opacity: 0.3;
 									position: fixed;
 									inset: 0;
 									z-index: 5;
